# Book-Recommender-Public

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.cloudrun  Makefile  cloudbuild.yaml  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/clients/: __init__.py  openai_client.py  schemas.py
backend/app/common/: __init__.py  base_node.py  classification.py  enums.py  messages.py  prompt_loader.py  sse_stream.py
backend/app/config/: __init__.py  constants.py  logging_config.py
backend/app/db/: __init__.py  models.py  postgres.py  redis.py  sqlalchemy.py
backend/app/lifecycle/: __init__.py  shutdown.py  startup.py
backend/app/orchestration/: __init__.py  orchestrator.py  request_context.py
backend/app/pipeline/: __init__.py  initial_parse.py  strategy_classification.py  (+1 more)
backend/clients/: base.py  openai_client.py  schemas.py
backend/common/: __init__.py  operation.py
backend/config/: .env.example  .env.production  README  __init__.py  constants.py  env-vars.yaml.example  logging_config.py
backend/data/: ProjectInfo.json  README  __init__.py  init.sql  models.py
backend/db/: README  __init__.py  async_engine.py  bootstrap.py  readiness.py  sqlalchemy.py
backend/infra/: Caddyfile  Caddyfile.prod  Dockerfile  Dockerfile.cloudrun  docker-compose.prod.yml  docker-compose.yml
backend/ingestion/: README  __init__.py  csv_source.py  embed_fields.py  embeddings.py  export.py  loader.py  main.py  normalize.py  store.py
backend/prototype/: sql_alchemy.ipynb
(+111 files in other folders)
